<resources>
    <string name="app_name">RentStyle</string>
    <string name="welcome_msg" translatable="false">Your Ultimate Fashion Rental App</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="info_register">"Don't have an Account yet?"</string>
    <string name="register_bt">Register now</string>
    <string name="login_bt">Login now</string>
    <string name="info_login">Already have an account?</string>
    <string name="accept">Accept &amp; Continue</string>
    <string name="rental_terms_and_conditions_title">Terms Of Service</string>
    <string name="agrement">Agreement</string>
    <string name="fail_sign_up">Failed to create user account</string>
    <string name="network_error">Connection error</string>
    <string name="fail_sign_in">Email or password mismatch</string>
    <string name="fail_sign_in_google">Error sign in to Google account</string>
    <string name="confirm_mismatch">Confirmed password mismatch</string>
    <string name="permission_denied">Permissions are not granted</string>
    <string name="error_toast" translatable="false">Error : %1$s</string>
    <string name="choose_picture">Choose a Picture</string>
    <string name="cd_brand_logo" translatable="false">Brand logo</string>
    <string name="cd_icon_shopping_cart" translatable="false">Icon shopping cart</string>
    <string name="cd_icon_chat" translatable="false">Icon chat</string>
    <string name="txt_foryou" translatable="false">For you</string>
    <string name="txt_favorite" translatable="false">Favorites</string>
    <string name="txt_trending">Trending Now</string>
    <string name="txt_high_rating">Highest rating</string>
    <string name="cd_carousel" translatable="false">Banner</string>
    <string name="cd_promo" translatable="false">Product promo</string>
    <string name="cd_product_image" translatable="false">Product image</string>
    <string name="txt_new_product">New products</string>
    <string name="txt_product_rec">Recommendation for you</string>
    <string name="cd_fav_product" translatable="false">Favorite product</string>
    <string name="title_add_product">Add Product</string>
    <string name="booking_and_payment">Booking and Payment:</string>
    <string name="booking_description">Bookings can be made through the application or by visiting the store directly. Full payment must be made before collecting the items. Cancellations can be made up to 24 hours before the scheduled pickup with a certain fee deduction.</string>
    <string name="pickup_and_return">Pickup and Return Schedule:</string>
    <string name="pickup_description">Items must be picked up according to the scheduled time. Late returns will incur additional charges as per the agreement. Items must be returned in good condition as received, without significant damage or stains.</string>
    <string name="replacement_and_repair">Replacement and Repair:</string>
    <string name="replacement_description">Replacement of damaged or non-compliant items can be done within 24 hours after pickup. Damages that occur during use will be the responsibility of the renter, except for damage caused by the provider\'s fault.</string>
    <string name="cleanliness_and_maintenance">Cleanliness and Maintenance:</string>
    <string name="cleanliness_description">Items must be returned clean and ready for use. If there are stains or dirt, additional cleaning fees will be charged. The renter is responsible for the maintenance of the items during use.</string>
    <string name="usage_and_responsibility">Usage and Renter\'s Obligations:</string>
    <string name="usage_description">Items should only be used for appropriate purposes and must not violate social norms or laws. The renter is obligated to care for and use the items properly according to their function and intended use.</string>
    <string name="guarantee_and_responsibility">Guarantee and Responsibility:</string>
    <string name="guarantee_description">The renter must provide identity guarantees and a certain deposit before collecting the items. The provider is not responsible for any loss or accident that occurs during the use of the items.</string>
    <string name="button_submit">Agree</string>
    <string name="txt_home" translatable="false">Home</string>
    <string name="txt_explore" translatable="false">Explore</string>
    <string name="txt_notification" translatable="false">Notification</string>
    <string name="txt_profile" translatable="false">Profile</string>
    <string name="txt_product_image">Product image</string>
    <string name="txt_fav_button">Add to favorite</string>
    <string name="txt_rp" translatable="false">Rp</string>
    <string name="txt_view_shop">View shop</string>
    <string name="txt_product_details">Product details</string>
    <string name="txt_category">Category</string>
    <string name="txt_color">Color</string>
    <string name="txt_size">Size</string>
    <string name="txt_product_detail" translatable="false">: %1$s</string>
    <string name="txt_view_more">View more</string>
    <string name="txt_product_reviews">Product reviews</string>
    <string name="cd_user_photo" translatable="false">User photo</string>
    <string name="cd_review_photo" translatable="false">Review photo</string>
    <string name="tv_similar_products">Similar products</string>
    <string name="txt_rent_now">Rent this product</string>
    <string name="txt_add_to_cart">Add this to cart</string>
    <string name="cd_navigate_up" translatable="false">Navigate up</string>
    <string name="cd_icon" translatable="false">Icon</string>
    <string name="txt_all_products">All products</string>
    <string name="txt_days">days</string>
    <string name="txt_delete_all">Delete All</string>
    <string name="txt_check_out" translatable="false">Check out</string>
    <string name="txt_shopping_product_detail">Product lists</string>
    <string name="txt_search_results_for">Search results for</string>
    <string name="txt_edit_profile">Edit profile</string>
    <string name="txt_join_us">Join us!</string>
    <string name="txt_settings">Settings</string>
    <string name="txt_order_history">Order history</string>
    <string name="txt_order_status">Order status</string>
    <string name="txt_order_information">Order information</string>
    <string name="txt_order_id">Order ID</string>
    <string name="txt_order_date">Order date</string>
    <string name="txt_delivery_address">Delivery address</string>
    <string name="txt_product_information">Product information</string>
    <string name="tv_order_total">Order total</string>
    <string name="txt_deposit_total">Deposit total</string>
    <string name="txt_deposit_info">*Your deposit will be returned once you return the rented items</string>
    <string name="txt_payment_total">Payment total</string>
    <string name="txt_payment_method">Payment method</string>
    <string name="empty_field">Field must be filled!</string>
    <string name="invalid_email">Invalid Email format!</string>
    <string name="password_length">Password must be 8 characters or more</string>
    <string name="txt_email_hint" translatable="false">Email</string>
    <string name="txt_name_hint">Name</string>
    <string name="txt_password_hint" translatable="false">Password</string>
    <string name="txt_login_with">Or login with</string>
    <string name="txt_register_with">Or register with</string>
    <string name="txt_google" translatable="false">Google</string>
    <string name="txt_rent_warning">You are limited to rent one product only at once!</string>
    <string name="txt_return_date">Return date</string>
    <string name="txt_delivery_options">Delivery options</string>
    <string name="txt_change_address">Change address</string>
    <string name="txt_delivery_method">Delivery method</string>
    <string name="txt_change_payment_method">Change payment method</string>
    <string name="txt_pickup_address">Pickup address</string>
    <string name="txt_unconfirmed_order">Unconfirmed order</string>
    <string name="txt_unship">Orders need to be shipped</string>
    <string name="txt_rented_product">Products are being rented</string>
    <string name="txt_not_returned">Products have not been returned</string>
    <string name="txt_sell_notif">Your selling notifications</string>
    <string name="txt_seller_menu">Seller menu</string>
    <string name="txt_all_product">All products</string>
    <string name="txt_add_new_product">Add new products</string>
    <string name="txt_selling_results">Selling results</string>
    <string name="txt_seller_wallet">Seller\'s wallet</string>
    <string name="txt_product_name">Product name</string>
    <string name="txt_description">Description</string>
    <string name="txt_rent_price">Rent price</string>
    <string name="txt_currency" translatable="false">Rp</string>
    <string name="txt_product_price">Product price</string>
    <string name="txt_pick_up_from">Pick up from</string>
    <string name="txt_camera">Camera</string>
    <string name="txt_gallery">Gallery</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="black">Black</string>
    <string name="grey">Grey</string>
    <string name="purple">Purple</string>
    <string name="brown">Brown</string>
    <string name="yellow">Yellow</string>
    <string name="pink">Pink</string>
    <string name="next">Next</string>
    <string name="txt_onboard2">Enjoy peace of mind with secure transactions, ensuring your payments are safe</string>
    <string name="txt_skip">Skip</string>
    <string name="txt_welcome_to">Welcome to</string>
    <string name="txt_seller_welcome">We are excited to have you as part of our seller partners</string>
    <string name="txt_seller_tos_heading_1">Registration</string>
    <string name="txt_seller_tos_1">To list properties for rent, you must register for a seller account. You agree to provide accurate, current, and complete information during the registration process and to update such information to keep it accurate, current, and complete.</string>
    <string name="txt_seller_tos_heading_2">Creating Products</string>
    <string name="txt_seller_tos_2">As a seller, you can create listings for products available for rent. Each listing must include complete and accurate information about the property, including but not limited to, the address, description, photos, and any applicable fees.</string>
    <string name="txt_seller_tos_heading_3">Property Availability</string>
    <string name="txt_seller_tos_3">You must ensure that the property listed is available for rent as described. If a property becomes unavailable, you must update the listing immediately to reflect this change.</string>
    <string name="txt_seller_tos_heading_4">Compliance with Laws</string>
    <string name="txt_seller_tos_4">You agree to comply with all local, state, and federal laws, regulations, and ordinances applicable to your rental activities. This includes, but is not limited to, laws related to property rental, zoning, health and safety, and tax obligations.</string>
    <string name="txt_seller_tos_heading_5">Payments</string>
    <string name="txt_seller_tos_5">Payments for bookings will be processed securely through our third-party payment processor. You agree to the terms and conditions of the payment processor. RentStyle will remit payments to you after deducting any applicable fees and commissions.</string>
    <string name="txt_seller_tos_heading_6">Changes to Terms</string>
    <string name="txt_seller_tos_6">RentStyle reserves the right to modify or replace these Terms at any time. If a revision is material, we will provide at least 30 days\' notice prior to any new terms taking effect. By continuing to access or use our Service after those revisions become effective, you agree to be bound by the revised terms.</string>
</resources>