<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragment.onboarding.OnBoardingFragment2">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/skip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:textAlignment="viewEnd"
            android:layout_marginBottom="60dp"
            android:text="@string/txt_skip"
            android:textColor="@color/blue_ocean"
            android:textSize="20sp" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/iv_onBoarding"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:visibility="invisible"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/onboarding_2"
            app:lottie_speed="1.9" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:fontFamily="@font/inter_regular"
            android:text="@string/txt_onboard2"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:textAlignment="viewEnd"
            android:layout_marginTop="60dp"
            android:text="@string/next"
            android:textColor="@color/blue_ocean"
            android:textSize="20sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>